# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  import("//build/config/android/rules.gni")
}

config("internal_config") {
  if (is_win) {
    defines = [
      "_CRT_NONSTDC_NO_DEPRECATE",
      "LITTLE_ENDIAN",
      "_SCL_SECURE_NO_WARNINGS"
    ]
  }
}

config("external_config") {
  include_dirs = [
    ".",
    "relic/include",
    "relic/include/low",
  ]

  if (is_mac) {
    include_dirs += [ "anon/macos_include" ]
  } else if (is_ios) {
    if (current_cpu == "x64") {
        include_dirs += [ "anon/macos_include" ]
    } else {
        include_dirs += [ "anon/ios_include" ]
    }
  } else if (is_linux) {
    if (current_cpu == "x64") {
      include_dirs += [ "anon/linux_x64_include" ]
    } else if (current_cpu == "x86") {
      include_dirs += [ "anon/linux_x86_include" ]
    }
  } else if (is_android) {
    include_dirs += [ "anon/android_include" ]
  } else if (is_win) {
    if (target_cpu == "x64"){
      include_dirs += [ "anon/win_x64_include" ]
    } else if (target_cpu == "x86"){
      include_dirs += [ "anon/win_x86_include" ]
    }
  }

  defines = [
    "RELIC_LIBRARY",
  ]

  if (is_win) {
    libs = [ "advapi32.lib" ]
  }
}

static_library("anonize2") {
  public_configs = [ ":external_config" ]
  configs += [ ":internal_config" ]
  sources = [
    "relic/src/relic_err.c",
    "relic/src/relic_core.c",
    "relic/src/relic_conf.c",
    "relic/src/relic_pool.c",
    "relic/src/relic_util.c",
    "relic/src/rand/relic_rand_core.c",
    "relic/src/rand/relic_rand_hash.c",
    "relic/src/relic_test.c",
    "relic/src/relic_bench.c",
    "relic/src/bn/relic_bn_add.c",
    "relic/src/bn/relic_bn_cmp.c",
    "relic/src/bn/relic_bn_div.c",
    "relic/src/bn/relic_bn_factor.c",
    "relic/src/bn/relic_bn_gcd.c",
    "relic/src/bn/relic_bn_lcm.c",
    "relic/src/bn/relic_bn_mem.c",
    "relic/src/bn/relic_bn_mod.c",
    "relic/src/bn/relic_bn_mul.c",
    "relic/src/bn/relic_bn_mxp.c",
    "relic/src/bn/relic_bn_prime.c",
    "relic/src/bn/relic_bn_rec.c",
    "relic/src/bn/relic_bn_shift.c",
    "relic/src/bn/relic_bn_smb.c",
    "relic/src/bn/relic_bn_sqr.c",
    "relic/src/bn/relic_bn_srt.c",
    "relic/src/bn/relic_bn_util.c",
    "relic/src/dv/relic_dv_mem.c",
    "relic/src/dv/relic_dv_util.c",
    "relic/src/fp/relic_fp_add.c",
    "relic/src/fp/relic_fp_cmp.c",
    "relic/src/fp/relic_fp_exp.c",
    "relic/src/fp/relic_fp_inv.c",
    "relic/src/fp/relic_fp_mul.c",
    "relic/src/fp/relic_fp_param.c",
    "relic/src/fp/relic_fp_prime.c",
    "relic/src/fp/relic_fp_rdc.c",
    "relic/src/fp/relic_fp_shift.c",
    "relic/src/fp/relic_fp_sqr.c",
    "relic/src/fp/relic_fp_srt.c",
    "relic/src/fp/relic_fp_util.c",
    "relic/src/fpx/relic_fp12_mul.c",
    "relic/src/fpx/relic_fp12_sqr.c",
    "relic/src/fpx/relic_fp18_mul.c",
    "relic/src/fpx/relic_fp18_sqr.c",
    "relic/src/fpx/relic_fp2_mul.c",
    "relic/src/fpx/relic_fp2_sqr.c",
    "relic/src/fpx/relic_fp3_mul.c",
    "relic/src/fpx/relic_fp3_sqr.c",
    "relic/src/fpx/relic_fp6_mul.c",
    "relic/src/fpx/relic_fp6_sqr.c",
    "relic/src/fpx/relic_fpx_add.c",
    "relic/src/fpx/relic_fpx_cmp.c",
    "relic/src/fpx/relic_fpx_exp.c",
    "relic/src/fpx/relic_fpx_frb.c",
    "relic/src/fpx/relic_fpx_inv.c",
    "relic/src/fpx/relic_fpx_pck.c",
    "relic/src/fpx/relic_fpx_rdc.c",
    "relic/src/fpx/relic_fpx_srt.c",
    "relic/src/fpx/relic_fpx_util.c",
    "relic/src/ep/relic_ep_add.c",
    "relic/src/ep/relic_ep_curve.c",
    "relic/src/ep/relic_ep_dbl.c",
    "relic/src/ep/relic_ep_map.c",
    "relic/src/ep/relic_ep_mul.c",
    "relic/src/ep/relic_ep_mul_fix.c",
    "relic/src/ep/relic_ep_mul_sim.c",
    "relic/src/ep/relic_ep_neg.c",
    "relic/src/ep/relic_ep_norm.c",
    "relic/src/ep/relic_ep_param.c",
    "relic/src/ep/relic_ep_pck.c",
    "relic/src/ep/relic_ep_util.c",
    "relic/src/epx/relic_ep2_add.c",
    "relic/src/epx/relic_ep2_curve.c",
    "relic/src/epx/relic_ep2_dbl.c",
    "relic/src/epx/relic_ep2_frb.c",
    "relic/src/epx/relic_ep2_map.c",
    "relic/src/epx/relic_ep2_mul.c",
    "relic/src/epx/relic_ep2_mul_fix.c",
    "relic/src/epx/relic_ep2_mul_sim.c",
    "relic/src/epx/relic_ep2_neg.c",
    "relic/src/epx/relic_ep2_norm.c",
    "relic/src/epx/relic_ep2_pck.c",
    "relic/src/epx/relic_ep2_util.c",
    "relic/src/pp/relic_pp_add.c",
    "relic/src/pp/relic_pp_dbl.c",
    "relic/src/pp/relic_pp_exp.c",
    "relic/src/pp/relic_pp_map.c",
    "relic/src/pp/relic_pp_norm.c",
    "relic/src/md/blake2s-ref.c",
    "relic/src/md/relic_md_blake2s.c",
    "relic/src/md/relic_md_hmac.c",
    "relic/src/md/relic_md_kdf.c",
    "relic/src/md/relic_md_mgf.c",
    "relic/src/md/relic_md_sha1.c",
    "relic/src/md/relic_md_sha224.c",
    "relic/src/md/relic_md_sha256.c",
    "relic/src/md/relic_md_sha384.c",
    "relic/src/md/relic_md_sha512.c",
    "relic/src/md/sha1.c",
    "relic/src/md/sha224-256.c",
    "relic/src/md/sha384-512.c",
    "relic/src/low/easy/relic_bn_add_low.c",
    "relic/src/low/easy/relic_bn_cmp_low.c",
    "relic/src/low/easy/relic_bn_div_low.c",
    "relic/src/low/easy/relic_bn_mod_low.c",
    "relic/src/low/easy/relic_bn_mul_low.c",
    "relic/src/low/easy/relic_bn_shift_low.c",
    "relic/src/low/easy/relic_bn_sqr_low.c",
    "relic/src/low/easy/relic_fp_add_low.c",
    "relic/src/low/easy/relic_fp_cmp_low.c",
    "relic/src/low/easy/relic_fp_inv_low.c",
    "relic/src/low/easy/relic_fp_mul_low.c",
    "relic/src/low/easy/relic_fp_rdc_low.c",
    "relic/src/low/easy/relic_fp_shift_low.c",
    "relic/src/low/easy/relic_fp_sqr_low.c",
    "relic/src/low/easy/relic_fpx_add_low.c",
    "relic/src/low/easy/relic_fpx_mul_low.c",
    "relic/src/low/easy/relic_fpx_rdc_low.c",
    "relic/src/low/easy/relic_fpx_sqr_low.c",

    "anon/sha2.cpp",
    "anon/anon.cpp",
  ]

  if (target_cpu == "x86") {
    sources += [ "relic/src/arch/relic_arch_x86.c" ]
  } else if (target_cpu == "x64") {
    sources += [ "relic/src/arch/relic_arch_x64.c" ]
  } else {
    sources += [ "relic/src/arch/relic_arch_arm.c" ]
  }
}
